sass/px-app-nav-subgroup.scss
/*
 * Copyright (c) 2018, General Electric
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Settings
@import "px-defaults-design/_settings.defaults.scss";
// Normalize (excerpt)
:host {
  line-height: $inuit-base-line-height / $inuit-base-font-size; /* [1] */
  text-size-adjust: 100%; /* [4] */
  -moz-osx-font-smoothing: grayscale; /* [5] */
  -webkit-font-smoothing: antialiased; /* [5] */
}

// Generic
@import "px-box-sizing-design/_generic.box-sizing.scss";

// Component
:host {
  display: block;
  height: auto;
}

.app-nav-subgroup__dropdown {
  height: 0px;
  overflow: hidden;
}

